adding SigNoz integration
